Disabling buttons while waiting for response from sockets

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,3 +35,10 @@ textarea,
 select {
   font: inherit;
 }
+
+button {
+  background-color: green;
+  &:disabled {
+    background-color: red;
+  }
+}
