--- a/src/styles/dark-mode-toggler/main.scss
+++ b/src/styles/dark-mode-toggler/main.scss
@@ -4,11 +4,11 @@
 
 @layer components {
     .dark-mode-toggler-label {
-        @apply bg-white border-2 border-b-earie-black rounded-xl cursor-pointer p-1 transition-all ease-in-out duration-300
-        dark:bg-earie-black 
+        @apply bg-earie-black rounded-xl cursor-pointer p-1 transition-all ease-in-out duration-300
+        dark:bg-white
     }
     .dark-mode-toggler-icon {
-        @apply fill-earie-black w-8 h-8
-        dark:fill-white
+        @apply fill-white w-8 h-8
+        dark:fill-earie-black
     }
 }
