--- a/src/styles/navigation/main.scss
+++ b/src/styles/navigation/main.scss
@@ -4,11 +4,11 @@
 
 @layer components {
     .nav-item {
-      @apply font-bold text-dark-green h-full flex items-center transition-all ease-in-out duration-300
+      @apply font-bold text-dark-green h-20 lg:h-full flex items-center transition-all ease-in-out duration-300
       dark:text-light-green
     }
     .nav-item-clickable {
-      @apply nav-item parallelogram
+      @apply nav-item
       hover:bg-light-green hover:text-white
     }
   }
