--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import "pop-up/container";
 @import "dark-mode-toggler/main";
 @import "navigation/main";
+@import "show-page/main";
 
 *,
 *::before,
@@ -18,6 +19,7 @@
 }
 
 html, body {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   height: 100vh;
@@ -45,6 +47,14 @@ select {
 @layer components {
   .main-background {
     @apply dark:bg-[#000] transition-all duration-300
+  }
+  .accept-button {
+    @apply bg-green-500 border-2 border-dark-green text-dark-green p-3 rounded-2xl transition-all duration-300
+    hover:bg-dark-green hover:text-green-500
+  }
+  .cancel-button {
+    @apply bg-red-300 border-2 border-red-800 text-red-800 p-3 rounded-2xl transition-all duration-300
+    hover:bg-red-800 hover:text-red-300
   }
 }
 
