Pop ups styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @import "main-page/main-page";
-@import "pop-up/container";
+@import "pop-up/main";
 @import "dark-mode-toggler/main";
 @import "navigation/main";
 @import "show-page/main";
