--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@
 @import "dark-mode-toggler/main";
 @import "navigation/main";
 @import "show-page/main";
+@import "profile-page/main";
 
 *,
 *::before,
