Lists shows display

--- a/src/styles/profile-page/main.scss
+++ b/src/styles/profile-page/main.scss
@@ -9,4 +9,7 @@
     .profile-data-value {
         @apply show-stat-value
     }
-  }
+    .list-show-rented-etiquete {
+        @apply top-[45px] left-[-40px] w-[185px]
+    }
+}
