--- a/src/styles/profile-page/main.scss
+++ b/src/styles/profile-page/main.scss
@@ -12,4 +12,8 @@
     .list-show-rented-etiquete {
         @apply top-[45px] left-[-40px] w-[185px]
     }
+    .profile-tab-button {
+        @apply bg-light-green block w-full py-5 text-xl lg:text-2xl text-center font-bold text-white cursor-pointer duration-300 transition-all ease-in-out 
+        peer-checked:bg-teal dark:text-earie-black
+    }
 }
