--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "main-page/main-page";
+@import "main-page/main";
 @import "pop-up/main";
 @import "dark-mode-toggler/main";
 @import "navigation/main";
