--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
