--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -56,10 +56,9 @@ select {
   appearance: none;
 }
 
-
 @layer components {
   .main-background {
-    @apply bg-white dark:bg-[#000] transition-all duration-300 pt-[100px]
+    @apply bg-white dark:bg-[#000] transition-all duration-300
   }
   .accept-button {
     @apply bg-green-500 border-2 border-dark-green text-dark-green p-3 rounded-2xl transition-all duration-300
@@ -99,22 +98,39 @@ select {
   }
 }
 
-/* width */
-::-webkit-scrollbar {
+#scrollable::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
+#scrollable::-webkit-scrollbar-track {
+  background: #191716;
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
+#scrollable::-webkit-scrollbar-thumb {
+  background: #00bfb2;
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
+#scrollable::-webkit-scrollbar-thumb:hover {
+  background: #294643;
+}
+
+:not(#scrollable)::-webkit-scrollbar {
+  width: 12px;
+}
+
+:not(#scrollable)::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+:not(#scrollable)::-webkit-scrollbar-thumb {
+  background: #00bfb2;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+:not(#scrollable)::-webkit-scrollbar-thumb:hover {
+  background: #294643;
 }
