--- a/src/styles/pop-up/main.scss
+++ b/src/styles/pop-up/main.scss
@@ -4,12 +4,12 @@
 
 @layer components {
     .pop-up-container {
-        @apply fixed bottom-5 left-2 right-2 lg:right-5 lg:left-5 flex flex-col items-end gap-2 z-[9999]
+        @apply fixed bottom-5 left-2 right-2 sm:left-auto sm:right-5 flex flex-col items-end gap-2 z-[9999] sm:w-96
     }
     .notification-success {
-        @apply bg-white dark:bg-earie-black text-green-500 border-2 border-green-500 rounded-2xl p-4 w-full max-w-sm transition-all ease-in-out duration-300
+        @apply bg-white dark:bg-earie-black text-green-500 border-2 border-green-500 rounded-2xl p-4 w-full transition-all ease-in-out duration-300
     }
     .notification-error {
-        @apply bg-white dark:bg-earie-black text-red-500 border-2 border-red-500 rounded-2xl p-4 w-full max-w-sm md:w-80 transition-all ease-in-out duration-300
+        @apply bg-white dark:bg-earie-black text-red-500 border-2 border-red-500 rounded-2xl p-4 w-full md:w-80 transition-all ease-in-out duration-300
     }
 }
